--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
   <h1>HTML Challenge</h1>
   <hr>
   <a href="https://developer.mozilla.org/en-US/">Link to MDN Documentation</a>
-  <table class="cl-blue">
-    <tr>
-      <td>One</td>
-      <td>Two</td>
-    </tr>
-    <tr>
-      <td>Three</td>
-      <td>Four</td>
-    </tr>
-  </table>
+
+  <div class="block01">
+
+  </div>
+  <div class="block02">
+
+  </div>
 </body>
 
 </html>
