--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
   <a href="https://developer.mozilla.org/en-US/">Link to MDN Documentation</a>
 
   <div class="block01">
-
+    Hello
   </div>
   <div class="block02">
-
+    Peter
+  </div>
+  <div class="block03">
+    Parker
   </div>
 </body>
 
