--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
 
-  <h2>Hello Peter</h2>
+  <h2>HTML Test</h2>
+
+  <h2 class="font01">Test</h2>
 
   <div class="block01">
     <div class="block02">
