--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
   <h2>HTML Test</h2>
 
-  <h2 class="font01">Test</h2>
 
   <div class="block01">
-    <div class="block02">
-      Peter
-    </div>
+    Pan
+  </div>
+
+  <div class="block02">
+    Peter
   </div>
 
 </body>
